# echoloc

./: README.md  echoloc.cabal  flake.nix  hie.yaml  scripts.nix
app/: Main.hs
src/: Core.hs
