cabal-version: 3.4

name:           echoloc
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts

  build-depends:
      base

    -- Codecs
    , aeson
    , deriving-aeson
    , binary

    -- Parallelism
    , async

    -- Mutability
    , primitive

    -- Binary
    , bytestring
    , vector

    -- Containers
    , containers
    , unordered-containers

    -- Utilities
    , text
    , foldl
    , safe-exceptions
    -- fun
    , sdl2
    , OpenAL
    , ALUT
    , linear

  default-language: Haskell2010


library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      Core

  hs-source-dirs:
      src

executable echoloc
  import: common-opts
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends: echoloc
